feat: add more images & more labs

--- a/lab_023.html
+++ b/lab_023.html
@@ -87,8 +87,9 @@
         </div>
       </div>
       <p class="note"><strong>Note:</strong> Other <code>type</code> of <code class="language-html">&lt;input&gt;</code>
-        include <code>"radio"</code> and <code>"checkbox"</code>. What do you think those inputs look like?</p>
-      <p>If you remember back to Lab 15 and throughout the HTML labs, HTML only provides the <strong>semantics</strong>
+        include <code>"radio"</code> and <code>"checkbox"</code>. What do you think those inputs look like?
+        Try experimenting with changing the <code>type</code> to them.</p>
+      <p>If you remember back to Lab 15, HTML only provides the <strong>semantics</strong>
         or meaning of a webpage and not its appearance <em>or</em> its function. This separation of powers helps to keep your code nice
         and neat, but it also means that our forms won't function without the programming run it.</p>
 
