--- a/lab_025.html
+++ b/lab_025.html
@@ -44,11 +44,10 @@
       <h2>Goals</h2>
       <ul>
         <li>Review the takeaways of semantic HTML</li>
-        <li>Create your first GitHub repository and host your HTML website</li>
       </ul>
       <h2>Structure, not Style</h2>
       <p>Now that you've created an entire website in HTML, the <em>key idea</em> you should remember is that HTML
-        should not be used just to make pages look a certain way, but to also reinforce their <strong>meaning</strong>
+        should not be used just to make pages look a certain way, but to reinforce their <strong>meaning</strong>
         or
         <strong>semantics</strong>. Whenever possible, use tags that make logical sense and that provide a richer,
         clearer idea of what the role of certain components or content are.
@@ -58,19 +57,18 @@
           class="language-html">&lt;footer&gt;</code> with just <code class="language-html">&lt;div&gt;</code>, but it
         would be a less meaningful and more confusing structure to understand.</p>
       <p>Used correctly, semantic HTML webpages are understandable solely from their HTML structure,
-        improving accessibility. <em>And</em> they are more share-able and search-able across many different
-        platforms, increasing discover-ability and their impact.
+        improving accessibility. They are <em>also</em> more share-able and more search-able across many different
+        platforms, increasing their discover-ability and <strong>impact</strong>.
       </p>
-      <h2>GitHub Repository</h2>
-      <p>Speaking of discover-ability, so far you have been working and accessing your page on your own browser and
-        local system. However, the whole point of a website is for people to visit it. You also have a log
-        of your coding history in your local <code>Git</code> repository. Local repositories are hard to access on other
-        computers and susceptible to disappearing forever if your computer dies.</p>
-      <p>It's time to connect your <em>local repositoyr</em> to a <strong>remote repository</strong> on GitHub. This
-        will serve the dual purpose of hosting your local repository in more resilient servers and also make use of a
-        GitHub feature called <strong>GitHub pages</strong> which lets you host your own website for free!</p>
-      <h2>Make a Remote Repository</h2>
-      <p></p>
+      <h2>Tags Galore</h2>
+      <p>We've reviewed some of the most essential tags here, but feel free to explore the many other capabilities of
+        HTML. You might be wondering: <em>What about videos on my page?</em> <em>How do I post code?</em> <em>Can I
+          put a mixtape on my website?</em>
+      </p>
+      <p>We encourage you to explore the Mozilla Developer Network Web Documentation for HTML here: <a
+          href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">https://developer.mozilla.org/en-US/docs/Web/HTML/Element</a>.
+      </p>
+      <p>When developing, always remember to keep semantic HTML in mind!</p>
 
     </div>
   </main>
