feat: more labs

--- a/lab_027.html
+++ b/lab_027.html
@@ -157,14 +157,15 @@
 (out)Delta compression using up to 8 threads
 (out)Compressing objects: 100% (21/21), done.
 (out)Writing objects: 100% (23/23), 3.24 MiB | 2.95 MiB/s, done.
-(out)Total 23 (delta 11), reused 0 (delta 0), pack-reused 0
+(out)Total 28 (delta 6), reused 0 (delta 0), pack-reused 0
 (out)remote: Resolving deltas: 100% (11/11), done.
 (out)To https://github.com/&lt;username&gt;/&lt;username&gt;.github.io.git
-(out) * [new branch]      main -> main
-(out)branch 'main' set up to track 'origin/main'.
+(out) * [new branch]      main -&gt; main
+(out)branch &#39;main&#39; set up to track &#39;origin/main&#39;.
 (out)</code></pre>
-      <p>Now if you go to the repository on GitHub, you should see all your local files uploaded to the remote repository!</p>
-      <img src="assets/2701.png" alt="GitHub repository with all the local files uploaded">
+      <p>You should see something similar to above. 
+      Now if you go to the repository on GitHub, you should see all your local files uploaded to the remote repository!</p>
+      <img class="image" src="assets/2701.png" alt="GitHub repository with all the local files uploaded">
 
 
 
