fix: fixed typo in git commands

--- a/lab_010.html
+++ b/lab_010.html
@@ -49,7 +49,7 @@
       <p>Thankfully, there's a helpful suggestion about what we can do! To begin tracking this file in our
       <code>Git</code> repository, run the following command:</p>
       <h3><b>Execute</b></h3>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git add index.html</code></pre>
+      <pre class="command-line git" data-prompt="$"><code class="language-git">git add README.md</code></pre>
       <p>Now run, <code>git status</code> again to check the state of the working directory and repository.</p>
       <h3><b>Execute</b></h3>
       <pre class="command-line git" data-prompt="$"><code class="language-git">git status</code></pre>
