--- a/lab_011.html
+++ b/lab_011.html
@@ -50,10 +50,10 @@
       <h2>Change the README.md</h2>
       Put the follow in the README.md:
       <h3 class="file-heading"><em>README.md</em></h3>
-      <pre class="file"><code class="language-markdown">#&ltYour Name&gt's Personal Website
+      <pre class="file line-numbers"><code class="language-markdown">#&ltYour Name&gt's Personal Website
 This is a personal website built using the Hack4Impact Starter Pack!
 &ltYou can add any description you want here.&gt
-[Visit it here](<github username>.github.io)!</code></pre>
+</code></pre>
         <p class="note"><strong>Note:</strong> <code>.md</code> files use markdown. It allows you to put formatting like <i>italics</i> or
         <strong>bold</strong> with just text. You might've seen markdown in Discord! </p>
       <h2>Check the Status</h2>
