feat: add more images and labs

--- a/lab_027.html
+++ b/lab_027.html
@@ -110,7 +110,8 @@
         merge develop
       </pre>
       <p>Branches are often used when multiple people are collaborating on a project's repository. It can get pretty
-        complicated pretty quickly. For example, try to understand what's happening in the <code>git graph</code> below.
+        complicated pretty quickly. For example, in the <code>git graph</code> below. Don't worry about understanding
+        it all now. You'll get better as you use <code>Git</code> branches more.
       </p>
       <pre class="mermaid">
         gitGraph
@@ -197,6 +198,9 @@ This is a personal website built using the Hack4Impact Starter Pack!
 (out)To https://github.com/khoa-l/khoa-l.github.io.git
 (out)   67db699..37d156a  main -&gt; main
 (out)</code></pre>
+<p>Double check that everything went well on your remote repository. You should see the new link in your <code>README.md</code>. If not, review
+the instructions and the last few labs.</p>
+<img class="image" src="assets/2702.png" alt="The remote repository with the update link in the README.md">
 
     </div>
   </main>
