feat: add more labs

--- a/lab_024.html
+++ b/lab_024.html
@@ -57,7 +57,10 @@
           <code class="language-html">&lt;main&gt;</code>. Give it the <code>id="contact-form"</code> attribute.
         </li>
         <li>In your <code>contact.html</code>, add an <code class="language-html">&lt;input type="text"&gt;</code> for
-          <strong>Name</strong> and <strong>Email</strong>.
+          <strong>Name</strong>. Give it the <code>id="name"</code> attribute.
+        </li>
+        <li>In your <code>contact.html</code>, add an <code class="language-html">&lt;input type="email"&gt;</code> for
+          <strong>Email</strong>. Give it the <code>id="email"</code> attribute.
         </li>
         <li>In your <code>contact.html</code>, add a <code class="language-html">&lt;textarea&gt;</code> for
           <strong>Message</strong>
@@ -66,7 +69,7 @@
           the <strong>Submit</strong> button
         </li>
         <p class="note"><strong>Note:</strong> Remember to have all the appropriate attribute fields and values for each
-          tag. Make sure they are all <code>required</code> too.</p>
+          tag. Make sure they are all have the <code>required</code> attribute too.</p>
       </ul>
       <p>You should have the following! If you don't, double check the previous labs or ask for help on GitHub
         Discussions.</p>
