--- a/lab_028.html
+++ b/lab_028.html
@@ -46,15 +46,18 @@
         <li>Visit and share your website!</li>
       </ul>
       <h2>Visit Your Website!</h2>
-      <p>Wait a few minutes and enter the name of your GitHub repository as a URL. <code>&lt;username&gt;.github.io</code>
-      will show your HTML website in all its glory, fully hosted and shareable to anyone with that URL!</p>
+      <p>Wait a few minutes and enter the name of your GitHub repository as a URL.
+        <code>&lt;username&gt;.github.io</code>
+        will show your HTML website in all its glory, fully hosted and shareable to anyone with that URL!
+      </p>
       <img class="image" src="assets/2801.png" alt="The hosted GitHub pages website">
       <p>GitHub lets you host as many static websites as you would like from your GitHub account. As long as you have an
-     <code>index.html</code> in the repository, it will show up on the web. The URLs for any other repository on your account
-     will be <code>&lt;username&gt;.github.io/&lt;project-name&gt;</code>.</p>
-     <h2>Share Your Website</h2>
-     <p>Go to GitHub Discussions and in the <strong>Share Your Website!</strong> discussion post, make a reply with a link to
-     your website. Feel free to tell us a little about it or talk about your progress so far!</p>
+        <code>index.html</code> in the repository, it will show up on the web. The URLs for any other repository on your
+        account will be <code>&lt;username&gt;.github.io/&lt;project-name&gt;</code>.
+      </p>
+      <h2>Share Your Website</h2>
+      <p>Go to GitHub Discussions and in the <strong>Share Your Website!</strong> discussion post, make a reply with a
+        link to your website. Feel free to tell us a little about it or talk about your progress so far!</p>
 
 
 
