--- a/lab_029.html
+++ b/lab_029.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab  - Git
+    Lab 29 - Cascading Style Sheets
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -16,7 +16,7 @@
   <link href="css/prism.css" rel="stylesheet" />
 </head>
 
-<body data-lab-id="">
+<body data-lab-id="29">
   <a class="skip-to-content" href="#content" tabindex="1">
     Skip to content
   </a>
@@ -37,14 +37,44 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab </em>
-        Git
+        <em>Lab 29</em>
+        Cascading Style Sheets
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Learn about <code>Git</code></li>
+        <li>Learn about Cascading Style Sheets (CSS)</li>
       </ul>
+      <h2>CSS</h2>
+      <p>A <strong>Cascading Style Sheet</strong>, or <strong>CSS</strong>, is the glitter, the
+        paint, and the <span class="neon">neon</span> that makes a website shine. It provides all of the styling and
+        visual appearance of a website. You might see some websites and developers using tools which mix HTML and CSS,
+        however we <em>strongly</em> recommend that you keep them separate.
+      </p>
+      <p>Remember, HTML is for content and CSS if for appearance. They both have their jobs and its your job as a
+        developer to use them properly! With that said, let's learn about how to apply CSS to HTML.</p>
+      <h2>Applying CSS</h2>
+      <p>There are three ways to apply CSS to HTML: <strong>inline</strong>, <strong>internal</strong>, and
+        <strong>external</strong>. Keeping with our separation of responsibilities, we will be using the
+        <strong>external</strong> method of applying CSS
+      </p>
+      <p>In the <code class="language-html">&lt;head&gt;</code> of your <code>index.html</code>, add the <code
+          class="language-html">&lt;link&gt;</code> tag below.</p>
+      <h3 class="file-heading"><em>index.html</em></h3>
+      <pre class="file line-numbers" data-range="1,6" data-src="prism/html/2901.html"></pre>
+      <p>This will tell your browser to apply the styles in <code>styles.css</code> to your HTML page. We'll be
+      using the same CSS style sheet for all our pages so add the same to all your other HTML pages as well.
+      </p>
+      <p class="note"><strong>Note:</strong> As you go through these next few sections, be sure to still stage and
+        commit your changes. You don't need to push as often to the remote repository, but when you're happy with
+        something it might be a good idea to also push.</p>
+        <h2>Make It Your Own</h2>
+        <p>CSS is very flexible and has a lot of capabilities, so instead of describing what you need to do like we
+        did with HTML, we'll give you the options and tell you what we did, but you're free to explore and change the
+        CSS as much or as little as you want!</p>
+        <p>If you just follow our stylings, you'll get a very specific looking website so we encourage you to make it
+        your own!</p>
+
 
 
     </div>
